Fix the button menu display on mobile devices

--- a/src/themes/custom/danpayne_theme/css/main.css
+++ b/src/themes/custom/danpayne_theme/css/main.css
@@ -878,6 +878,7 @@ textarea:focus, input[type="text"]:focus, input[type="email"]:focus, input[type=
     height: 28px;
     padding: 10px;
     cursor: pointer;
+    display: block;
   }
   
   .lines {
